# demo

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-exe.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/: images.ts
src/components/frame/: DeviceFrame.vue  TabletFrame.vue
src/modules/analytics/views/: AnalyticsDashboardView.vue
src/modules/apis-open-finance/components/: ApiConfigModal.vue  LoadingScreen.vue
src/modules/apis-open-finance/views/: DashboardView.vue  LoginView.vue  OverviewView.vue
src/modules/bankambient/views/: AccountSelectionView.vue  BankDashboardView.vue  BankDashboardViewBlue.vue  BankDashboardViewGreen.vue  BankDashboardViewRed.vue  ConnectionLoadingView.vue  ConnectionSuccessView.vue  DataProcessingAnimationView.vue  ThankYouView.vue
src/modules/consent/components/: ConsentForm.vue
src/modules/consent/views/: consentView.vue
src/modules/ecosystem-diagram/views/: EcosystemDiagramView.vue
src/modules/entity/components/: DesmaterializedFormPdf.vue  EntityAnimationContainer.vue  EntityFlowVisualization.vue  EntitySidebar.vue  TransactionalInsightsIntro.vue
src/modules/entity/layouts/: EntityLayout.vue
src/router/: index.ts
src/shared/components/: BaseCard.vue  LoadingScreen.vue  TechnicalFlowLauncher.vue
src/shared/composables/: useAsyncData.ts
src/shared/layouts/: AppLayout.vue
src/shared/services/: httpClient.ts
src/shared/styles/: base.css  tokens.css
src/stores/: analytics.ts  formData.ts
(+104 files in other folders)
