[package]
name = "demo"
version = "0.1.0"
description = "Tauri desktop wrapper for the demo Vite + Vue app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "s"
